--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -455,14 +455,27 @@
             <img src="/assets/img/keep.svg" />
           </div>
         </div>
-        <div *ngIf="((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'actionbanner', scheduleIds: scheduleIds }) === 'relax'" [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
+        <div *ngIf="((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'actionbanner', scheduleIds: scheduleIds }) === 'done today'" [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
           <div class="graphic-banner blue">
-            <h1>Relax</h1>
-            <p>There is no lesson scheduled today. Enjoy your day off.</p>
+            <h1>Great Work</h1>
+            <p>You have completed your lesson for today.</p>
             <img src="/assets/img/relax.svg" />
           </div>
         </div>
-
+        <div *ngIf="((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'actionbanner', scheduleIds: scheduleIds }) === 'relax'" [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
+          <div class="graphic-banner blue">
+            <h1>Relax</h1>
+            <p>There is no lesson scheduled for today.</p>
+            <img src="/assets/img/relax.svg" />
+          </div>
+        </div>
+        <div *ngIf="((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'actionbanner', scheduleIds: scheduleIds }) === 'completed'" [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
+          <div class="graphic-banner blue">
+            <h1>Congratulations</h1>
+            <p>You have completed the course.</p>
+            <img src="/assets/img/relax.svg" />
+          </div>
+        </div>
         <!--Daily Goal Card-->
         <div *ngIf="((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'calendaritem', scheduleIds: scheduleIds })">
           <ion-item lines="none">
