--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -71,8 +71,12 @@ app-showfeature {
       font-size: 35px;
     }
 
-    & p {
-      font-size: 20px;
+    .info {
+      margin-right: 150px;
+
+      & p {
+        font-size: 20px;
+      }
     }
 
     & img {
