--- a/src/app/pages/feature/createcommunity/createcommunity.page.html
+++ b/src/app/pages/feature/createcommunity/createcommunity.page.html
@@ -1,4 +1,4 @@
-<ion-header id="createfeature-header">
+<ion-header id="createcommunity-header">
   <ion-toolbar *ngIf="resource && resource._id && moment && moment.resource && moment.resource.field && moment.matrix_string && moment.matrix_string.length">
     <ion-buttons slot="start">
       <ion-button id="backButton" (click)="closeModal(false)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
