--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -33,14 +33,14 @@
                 </ion-segment-button>
               </ion-segment>
               <ion-card *ngIf="loginMode === 'email'">
-                <input id="email" class="register-email ion-input" type="text" formControlName="email" placeholder="Email" inputmode="email" autocomplete="username" />
+                <input id="email" class="register-email ion-input" (keyup.enter)="login()" type="text" formControlName="email" placeholder="Email" inputmode="email" autocomplete="username" />
               </ion-card>
               <ion-card *ngIf="loginMode === 'mobile'">
                 <ion-label hidden>Calling Code</ion-label>
                 <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code ion-no-margin" formControlName="calling_code" value="+1">
                   <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
                 </ion-select>
-                <input id="phone_number" class="phone_number ion-input" type="tel" formControlName="phone_number" placeholder="Mobile Number" inputmode="tel" autocomplete="username" />
+                <input id="phone_number" class="phone_number ion-input" (keyup.enter)="login()" type="tel" formControlName="phone_number" placeholder="Mobile Number" inputmode="tel" autocomplete="username" />
               </ion-card>
               <ion-card [hidden]="recovery_mode">
                 <input id="password" class="password ion-input" (keyup.enter)="login()" placeholder="Password" formControlName="password" [type]="passwordType" inputmode="text" autocomplete="current-password" />
