--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -282,6 +282,8 @@
 
     --ion-item-background: #121212;
     --ion-item-background-activated: #313131;
+
+    --plyr-audio-controls-background: transparent;
   }
 
 
@@ -320,6 +322,8 @@
     --ion-color-step-950: #f3f3f3;
 
     --ion-item-background: #1A1B1E;
+
+    --plyr-audio-controls-background: transparent;
   }
 
   ion-title.title-large {
