add pillar's tos and privacy policy, update Restvo's

--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -230,7 +230,7 @@
                         </div>
                       </form>
                       <div></div><!--Do not remove! This fixes the white line issue at the bottom-->
-                      <p class="centered" style="text-align: center;">By proceeding, you agree to our <a href="https://restvo.com/tos" target="_blank">Terms of Services</a>.</p>
+                      <p class="centered" style="text-align: center;">By proceeding, you agree to our <a href="https://restvo.com/pillar/tos" target="_blank">Terms of Services</a>.</p>
                       <ion-row>
                         <ion-col>
                           <ion-button id="createEmailAccount" [disabled]="!nameForm.valid || !emailPassForm.valid" shape="round" color="primary" (click)="registerEmail()">Create Account</ion-button>
@@ -274,7 +274,7 @@
                         </div>
                       </form>
                       <p class="centered">We will send you a SMS message to verify this number. Standard SMS rate applies.</p>
-                      <p class="centered" style="text-align: center;">By proceeding, you agree to our <a href="https://restvo.com/tos" target="_blank">Terms of Services</a>.</p>
+                      <p class="centered" style="text-align: center;">By proceeding, you agree to our <a href="https://restvo.com/pillar/tos" target="_blank">Terms of Services</a>.</p>
                       <ion-row>
                         <ion-col>
                           <ion-button id="createMobileAccount" shape="round" color="primary" (click)="registerMobile()" [disabled]="!nameForm.valid || !mobileForm.valid">Send the SMS Code</ion-button>
