upgraded to Angular 10

--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -47,7 +47,7 @@ app-dashboard {
   }
 
   .dashboard-banner {
-    background: url('assets/img/onboarding-1.jpg');
+    // background: url('assets/img/onboarding-1.jpg');
     background-size: cover;
     max-width: 600px;
     margin: 0 auto;
