--- a/src/app/pages/connect/focus-photo/focus-photo.page.html
+++ b/src/app/pages/connect/focus-photo/focus-photo.page.html
@@ -13,11 +13,8 @@
 </ion-header>
 
 <ion-content>
-  <!--<pinch-zoom class="container">
+  <pinch-zoom class="container">
     <img [src]="imageUri">
-  </pinch-zoom>-->
-  <div class="container">
-    <img [src]="imageUri">
-  </div>
+  </pinch-zoom>
 </ion-content>
 
