--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -178,10 +178,10 @@ app-dashboard {
   }
 
   .calendar-container {
-    width: 85%;
+    width: 100%;
     max-width: 400px;
-    margin: 10px auto;
-    padding-bottom: 10px;
+    margin: auto;
+    //padding-bottom: 10px;
     --color: var(--ion-color-dark);
   }
 
@@ -190,6 +190,8 @@ app-dashboard {
   }
 
   .month-title {
+    font-size: 18px;
+    margin-bottom: 20px;
     width: calc((100% / 7) * 5);
     text-align: center;
     display: inline-block;
@@ -255,9 +257,12 @@ app-dashboard {
 
   .list-container {
     overflow: scroll;
-    max-height: 400px;
-    margin: 0 auto;
     max-width: 400px;
+    cursor: pointer;
+  }
+
+  .fixed-height {
+    max-height: 133px;
   }
 
   .system-message-container {
